--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Netflix Website Clone </title>
+  <title>Student project|Netflix Clone</title>
   <link rel="icon" type="image/png" href="images/favicon.png">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -103,7 +104,7 @@ You can also download your favourite shows with the iOS or Android app. Use down
             </li>
             <li>
                 <input type="radio" name="accordian" id="fifth">
-                <label for="fifth">What can I watch on netflix?</label>
+                <label for="fifth">What can I watch on Netflix?</label>
                 <div class="content">
                     <p>Netflix has an extensive library of feature films, documentaries, shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
                 </div>
@@ -117,7 +118,7 @@ You can also download your favourite shows with the iOS or Android app. Use down
 </div>
 
 <div class="footer">
-    <h2>Questions? call 000-800-919-1743</h2>
+    <h2>Questions? contact us</h2>
 
    <div class="row">
       <div class="col">
@@ -145,10 +146,18 @@ You can also download your favourite shows with the iOS or Android app. Use down
       </div>
   </div>
   <button class="language-btn">English <img src="images/down-icon.png"></button>
-  <p class="copyright-txt">Netflix India</p>
+    <p class="copyright-txt">
+            © 2026 StreamFlix – Demo Project
+        </p>
+
+        <p style="font-size:12px;color:#999;text-align:center;margin-top:10px;">
+            ⚠️ This is an educational UI clone project.  
+            Not affiliated with Netflix or any real streaming platform.
+        </p>
 </div>
 
 <script src="script.js"></script>
 
 </body>
+
 </html>
