--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student project|Netflix Clone</title>
+  <title>Student project|Streamflix Clone</title>
   <link rel="icon" type="image/png" href="images/favicon.png">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -72,41 +72,41 @@
         <ul class="accordian">
             <li>
                 <input type="radio" name="accordian" id="first">
-                <label for="first">What is Netflix?</label>
+                <label for="first">What is Streamflix?</label>
                 <div class="content">
-                    <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices.
+                    <p>Streamflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices.
 
 You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!</p>
                 </div>
             </li>
             <li>
                 <input type="radio" name="accordian" id="second">
-                <label for="second">How much does Netflix cost?</label>
+                <label for="second">How much does Streamflix cost?</label>
                 <div class="content">
-                    <p>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹149 to ₹649/month.</p>
+                    <p>Watch Streamflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹149 to ₹649/month.</p>
                 </div>
             </li>
             <li>
                 <input type="radio" name="accordian" id="third">
                 <label for="third">Where can I watch?</label>
                 <div class="content">
-                    <p>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
+                    <p>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at Streamflix.com from your personal computer or on any internet-connected device that offers the Streamflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
 
-You can also download your favourite shows with the iOS or Android app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</p>
+You can also download your favourite shows with the iOS or Android app. Use downloads to watch while you're on the go and without an internet connection. Take Streamflix with you anywhere.</p>
                 </div>
             </li>
             <li>
                 <input type="radio" name="accordian" id="fourth">
                 <label for="fourth">How do I cancel?</label>
                 <div class="content">
-                    <p>Netflix is flexible. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</p>
+                    <p>Streamflix is flexible. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</p>
                 </div>
             </li>
             <li>
                 <input type="radio" name="accordian" id="fifth">
-                <label for="fifth">What can I watch on Netflix?</label>
+                <label for="fifth">What can I watch on Streamflixflix?</label>
                 <div class="content">
-                    <p>Netflix has an extensive library of feature films, documentaries, shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
+                    <p>Streamflix has an extensive library of feature films, documentaries, shows, anime, award-winning Streamflix originals, and more. Watch as much as you want, anytime you want.</p>
                 </div>
             </li>
         </ul>
@@ -137,7 +137,7 @@ You can also download your favourite shows with the iOS or Android app. Use down
         <a href="#">Account</a>
         <a href="#">Ways to watch </a>
         <a href="#">Corporate Information</a>
-        <a href="#">Only on Netflix</a>
+        <a href="#">Only on Streamflix</a>
       </div>
        <div class="col">
         <a href="#">Media Centre</a>
@@ -152,7 +152,7 @@ You can also download your favourite shows with the iOS or Android app. Use down
 
         <p style="font-size:12px;color:#999;text-align:center;margin-top:10px;">
             ⚠️ This is an educational UI clone project.  
-            Not affiliated with Netflix or any real streaming platform.
+            Not affiliated with any real streaming platform.
         </p>
 </div>
 
@@ -161,3 +161,4 @@ You can also download your favourite shows with the iOS or Android app. Use down
 </body>
 
 </html>
+
