--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <img src="images/logo.png" class="logo">
         <div>
             <button class="language-btn">English <img src="images/down-icon.png"></button>
-            <button>Sign In</button>
+            <a href="https://github.com/amirvarsh77/pep-proj" style="text-decoration:none;"><button type="button">View Code</button></a>
         </div>
     </nav>
     <div class="header-content">
         <h1>Unlimited movies, Tv shows and more.</h1>
-        <h3>Watch anywhere.Cancel anytime.</h3>
+        <h3>Watch anywhere. Cancel anytime.</h3>
         <p>Ready to watch? Enter your mail to create or restart your membership.</p>
-        <form class="email-signup">
-            <input type="email" placeholder="email address" required>
-            <button type="submit">Get Started</button>
-        </form>
+        <form class="email-signup" onsubmit="return false;">
+    <input type="text" placeholder="Email address (Demo Only)" disabled style="cursor: not-allowed;">
+    <button type="button" onclick=" alert('This is a UI clone demo. No data is collected.')">Get Started</button>
+</form>
     </div>
 </div>
 
@@ -90,7 +90,7 @@ You can watch as much as you want, whenever you want, without a single ad – al
                 <input type="radio" name="accordian" id="third">
                 <label for="third">Where can I watch?</label>
                 <div class="content">
-                    <p>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at Streamflix.com from your personal computer or on any internet-connected device that offers the Streamflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
+                    <p>Watch anywhere, anytime. Sign in with your Streamflix account to watch instantly on the web at Streamflix.com from your personal computer or on any internet-connected device that offers the Streamflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
 
 You can also download your favourite shows with the iOS or Android app. Use downloads to watch while you're on the go and without an internet connection. Take Streamflix with you anywhere.</p>
                 </div>
@@ -111,10 +111,10 @@ You can also download your favourite shows with the iOS or Android app. Use down
             </li>
         </ul>
         <small>Ready to watch? Enter your mail to create or restart your membership.</small>
-        <form class="email-signup">
-            <input type="email" placeholder="email address" required>
-            <button type="submit">Get Started</button>
-        </form>
+        <form class="email-signup" onsubmit="return false;">
+    <input type="text" placeholder="Email address (Demo Only)" disabled style="cursor: not-allowed;">
+    <button type="button" onclick="alert('This is a UI clone demo. No data is collected.')">Get Started</button>
+</form>
 </div>
 
 <div class="footer">
@@ -161,4 +161,5 @@ You can also download your favourite shows with the iOS or Android app. Use down
 </body>
 
 </html>
+
 
