--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div style="background: yellow; color: black; text-align: center; padding: 10px; font-weight: bold;">
+    ⚠️ EDUCATIONAL PORTFOLIO PROJECT: This is not a real streaming service. Do not enter any personal data.
+</div>
 <div class="header">
     <nav>
         <img src="images/logo.png" class="logo">
@@ -161,5 +164,6 @@ You can also download your favourite shows with the iOS or Android app. Use down
 </body>
 
 </html>
+
 
 
