--- a/index.html
+++ b/index.html
@@ -1,169 +1,178 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student project|Streamflix Clone</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student project | Streamflix Clone</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div style="background: yellow; color: black; text-align: center; padding: 10px; font-weight: bold;">
-    ⚠️ EDUCATIONAL PORTFOLIO PROJECT: This is not a real streaming service. Do not enter any personal data.
-</div>
-<div class="header">
-    <nav>
-        <div>
+    <div class="header">
+        <nav>
+            <div>
+                <button class="language-btn">English <img src="images/down-icon.png"></button>
+                <a href="https://github.com/amirvarsh77/pep-proj" style="text-decoration:none;"><button
+                        type="button">View Code</button></a>
+            </div>
+        </nav>
+        <div class="header-content">
+            <h1>Unlimited movies, Tv shows and more.</h1>
+            <h3>Watch anywhere. Cancel anytime.</h3>
+            <p>Ready to watch? Enter your mail to create or restart your membership.</p>
+            <form class="email-signup" onsubmit="return false;">
+                <input type="text" placeholder="Email address (Demo Only)" disabled style="cursor: not-allowed;">
+                <button type="button" onclick=" alert('This is a UI clone demo. No data is collected.')">Get
+                    Started</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="features">
+        <div class="row">
+            <div class="text-col">
+                <h2>Enjoy on your TV.</h2>
+                <p>Watch on smart TVs, PlayStation, Xbox, Chromcast, Apple TV, Blu-ray players and more</p>
+            </div>
+            <div class="img-col">
+                <img src="images/feature-1.png">
+            </div>
+        </div>
+        <div class="row">
+            <div class="img-col">
+                <img src="images/feature-2.png">
+            </div>
+            <div class="text-col">
+                <h2>Download your shows to watch offline.</h2>
+                <p>Save your favourites easily and always have something to watch.</p>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="text-col">
+                <h2>Watch Everywhere</h2>
+                <p>Stream unlimited movies and TV shows on your phone, tablet, laptop and TV.</p>
+            </div>
+            <div class="img-col">
+                <img src="images/feature-3.png">
+            </div>
+        </div>
+        <div class="row">
+            <div class="img-col">
+                <img src="images/feature-4.png">
+            </div>
+            <div class="text-col">
+                <h2>Create profiles for children.</h2>
+                <p>Send children on adventures with thier favourite charecters
+                    in a space made just dor them-free with your membership.</p>
+            </div>
+
+        </div>
+        <div class="faq">
+            <h2>Frequently Asked Questions</h2>
+            <ul class="accordian">
+                <li>
+                    <input type="radio" name="accordian" id="first">
+                    <label for="first">What is Streamflix?</label>
+                    <div class="content">
+                        <p>Streamflix is a streaming service that offers a wide variety of award-winning TV shows,
+                            movies, anime, documentaries and more – on thousands of internet-connected devices.
+
+                            You can watch as much as you want, whenever you want, without a single ad – all for one low
+                            monthly price. There's always something new to discover, and new TV shows and movies are
+                            added every week!</p>
+                    </div>
+                </li>
+                <li>
+                    <input type="radio" name="accordian" id="second">
+                    <label for="second">How much does Streamflix cost?</label>
+                    <div class="content">
+                        <p>Watch Streamflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for
+                            one fixed monthly fee. Plans range from ₹149 to ₹649/month.</p>
+                    </div>
+                </li>
+                <li>
+                    <input type="radio" name="accordian" id="third">
+                    <label for="third">Where can I watch?</label>
+                    <div class="content">
+                        <p>Watch anywhere, anytime. Sign in with your Streamflix account to watch instantly on the web
+                            at Streamflix.com from your personal computer or on any internet-connected device that
+                            offers the Streamflix app, including smart TVs, smartphones, tablets, streaming media
+                            players and game consoles.
+
+                            You can also download your favourite shows with the iOS or Android app. Use downloads to
+                            watch while you're on the go and without an internet connection. Take Streamflix with you
+                            anywhere.</p>
+                    </div>
+                </li>
+                <li>
+                    <input type="radio" name="accordian" id="fourth">
+                    <label for="fourth">How do I cancel?</label>
+                    <div class="content">
+                        <p>Streamflix is flexible. You can easily cancel your account online in two clicks. There are no
+                            cancellation fees – start or stop your account anytime.</p>
+                    </div>
+                </li>
+                <li>
+                    <input type="radio" name="accordian" id="fifth">
+                    <label for="fifth">What can I watch on Streamflixflix?</label>
+                    <div class="content">
+                        <p>Streamflix has an extensive library of feature films, documentaries, shows, anime,
+                            award-winning Streamflix originals, and more. Watch as much as you want, anytime you want.
+                        </p>
+                    </div>
+                </li>
+            </ul>
+            <small>Ready to watch? Enter your mail to create or restart your membership.</small>
+            <form class="email-signup" onsubmit="return false;">
+                <input type="text" placeholder="Email address (Demo Only)" disabled style="cursor: not-allowed;">
+                <button type="button" onclick="alert('This is a UI clone demo. No data is collected.')">Get
+                    Started</button>
+            </form>
+        </div>
+
+        <div class="footer">
+            <h2>Questions? contact us</h2>
+
+            <div class="row">
+                <div class="col">
+                    <a href="#">FAQ</a>
+                    <a href="#">Invester Relations </a>
+                    <a href="#">Privacy</a>
+                    <a href="#">Speed Test</a>
+                </div>
+                <div class="col">
+                    <a href="#">Help Center</a>
+                    <a href="#">Jobs </a>
+                    <a href="#">Cookies Preferences</a>
+                    <a href="#">Legal Notices</a>
+                </div>
+                <div class="col">
+                    <a href="#">Account</a>
+                    <a href="#">Ways to watch </a>
+                    <a href="#">Corporate Information</a>
+                    <a href="#">Only on Streamflix</a>
+                </div>
+                <div class="col">
+                    <a href="#">Media Centre</a>
+                    <a href="#">Terms of Use </a>
+                    <a href="#">Contact Us</a>
+                </div>
+            </div>
             <button class="language-btn">English <img src="images/down-icon.png"></button>
-            <a href="https://github.com/amirvarsh77/pep-proj" style="text-decoration:none;"><button type="button">View Code</button></a>
-        </div>
-    </nav>
-    <div class="header-content">
-        <h1>Unlimited movies, Tv shows and more.</h1>
-        <h3>Watch anywhere. Cancel anytime.</h3>
-        <p>Ready to watch? Enter your mail to create or restart your membership.</p>
-        <form class="email-signup" onsubmit="return false;">
-    <input type="text" placeholder="Email address (Demo Only)" disabled style="cursor: not-allowed;">
-    <button type="button" onclick=" alert('This is a UI clone demo. No data is collected.')">Get Started</button>
-</form>
-    </div>
-</div>
+            <p class="copyright-txt">
+                © 2026 StreamFlix – Demo Project
+            </p>
 
-<div class="features">
-    <div class="row">
-        <div class="text-col">
-            <h2>Enjoy on your TV.</h2>
-            <p>Watch on smart TVs, PlayStation, Xbox, Chromcast, Apple TV, Blu-ray players and more</p>
+            <p style="font-size:12px;color:#999;text-align:center;margin-top:10px;">
+                ⚠️ This is an educational UI clone project.
+                Not affiliated with any real streaming platform.
+            </p>
         </div>
-        <div class="img-col">
-            <img src="images/feature-1.png" >
-        </div>
-    </div>
-    <div class="row">
-         <div class="img-col">
-            <img src="images/feature-2.png" >
-         </div>
-        <div class="text-col">
-            <h2>Download your shows to watch offline.</h2>
-            <p>Save your favourites easily and always have something to watch.</p>
-        </div>
-       
-    </div>
-    <div class="row">
-        <div class="text-col">
-            <h2>Watch Everywhere</h2>
-            <p>Stream unlimited movies and TV shows on your  phone, tablet, laptop and TV.</p>
-        </div>
-        <div class="img-col">
-            <img src="images/feature-3.png" >
-        </div>
-    </div>
-    <div class="row">
-         <div class="img-col">
-            <img src="images/feature-4.png" >
-        </div>
-        <div class="text-col">
-            <h2>Create profiles for children.</h2>
-            <p>Send children on adventures with thier favourite charecters 
-                in a space made just dor them-free with your membership.</p>
-        </div>
-        
-    </div>
-    <div class="faq">
-        <h2>Frequently Asked Questions</h2>
-        <ul class="accordian">
-            <li>
-                <input type="radio" name="accordian" id="first">
-                <label for="first">What is Streamflix?</label>
-                <div class="content">
-                    <p>Streamflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices.
 
-You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!</p>
-                </div>
-            </li>
-            <li>
-                <input type="radio" name="accordian" id="second">
-                <label for="second">How much does Streamflix cost?</label>
-                <div class="content">
-                    <p>Watch Streamflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹149 to ₹649/month.</p>
-                </div>
-            </li>
-            <li>
-                <input type="radio" name="accordian" id="third">
-                <label for="third">Where can I watch?</label>
-                <div class="content">
-                    <p>Watch anywhere, anytime. Sign in with your Streamflix account to watch instantly on the web at Streamflix.com from your personal computer or on any internet-connected device that offers the Streamflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
-
-You can also download your favourite shows with the iOS or Android app. Use downloads to watch while you're on the go and without an internet connection. Take Streamflix with you anywhere.</p>
-                </div>
-            </li>
-            <li>
-                <input type="radio" name="accordian" id="fourth">
-                <label for="fourth">How do I cancel?</label>
-                <div class="content">
-                    <p>Streamflix is flexible. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</p>
-                </div>
-            </li>
-            <li>
-                <input type="radio" name="accordian" id="fifth">
-                <label for="fifth">What can I watch on Streamflixflix?</label>
-                <div class="content">
-                    <p>Streamflix has an extensive library of feature films, documentaries, shows, anime, award-winning Streamflix originals, and more. Watch as much as you want, anytime you want.</p>
-                </div>
-            </li>
-        </ul>
-        <small>Ready to watch? Enter your mail to create or restart your membership.</small>
-        <form class="email-signup" onsubmit="return false;">
-    <input type="text" placeholder="Email address (Demo Only)" disabled style="cursor: not-allowed;">
-    <button type="button" onclick="alert('This is a UI clone demo. No data is collected.')">Get Started</button>
-</form>
-</div>
-
-<div class="footer">
-    <h2>Questions? contact us</h2>
-
-   <div class="row">
-      <div class="col">
-        <a href="#">FAQ</a>
-        <a href="#">Invester Relations </a>
-        <a href="#">Privacy</a>
-        <a href="#">Speed Test</a>
-      </div>
-      <div class="col">
-        <a href="#">Help Center</a>
-        <a href="#">Jobs </a>
-        <a href="#">Cookies Preferences</a>
-        <a href="#">Legal Notices</a>
-      </div>
-      <div class="col">
-        <a href="#">Account</a>
-        <a href="#">Ways to watch </a>
-        <a href="#">Corporate Information</a>
-        <a href="#">Only on Streamflix</a>
-      </div>
-       <div class="col">
-        <a href="#">Media Centre</a>
-        <a href="#">Terms of Use </a>
-        <a href="#">Contact Us</a>
-      </div>
-  </div>
-  <button class="language-btn">English <img src="images/down-icon.png"></button>
-    <p class="copyright-txt">
-            © 2026 StreamFlix – Demo Project
-        </p>
-
-        <p style="font-size:12px;color:#999;text-align:center;margin-top:10px;">
-            ⚠️ This is an educational UI clone project.  
-            Not affiliated with any real streaming platform.
-        </p>
-</div>
-
-<script src="script.js"></script>
+        <script src="script.js"></script>
 
 </body>
 
 </html>
-
-
-
-
-
